<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/result_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_win"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/computer_choice"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/computer"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="@+id/vs"
        app:layout_constraintEnd_toStartOf="@+id/vs"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/vs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vs"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/player_choice"
        app:layout_constraintEnd_toStartOf="@+id/player_choice"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/computer_choice" />

    <ImageView
        android:id="@+id/player_choice"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/you"
        android:background="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/vs"
        app:layout_constraintTop_toBottomOf="@id/result_title"
        app:srcCompat="@drawable/rock" />

    <TextView
        android:id="@+id/computer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/computer"
        app:layout_constraintEnd_toEndOf="@id/computer_choice"
        app:layout_constraintStart_toStartOf="@id/computer_choice"
        app:layout_constraintTop_toBottomOf="@id/computer_choice" />

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        app:layout_constraintEnd_toEndOf="@id/player_choice"
        app:layout_constraintStart_toStartOf="@id/player_choice"
        app:layout_constraintTop_toBottomOf="@id/player_choice" />

</androidx.constraintlayout.widget.ConstraintLayout>