<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MadLevel4Example.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:paddingStart="50dp"
            app:popupTheme="@style/Theme.MadLevel4Example.PopupOverlay"
            tools:ignore="RtlSymmetry" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/design_default_color_primary"
        android:clickable="true"
        android:contentDescription="@string/history"
        android:focusable="true"
        app:fabSize="mini"
        app:rippleColor="@color/design_default_color_primary"
        app:srcCompat="@drawable/ic_history_white_24dp"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/design_default_color_primary"
        android:clickable="true"
        android:contentDescription="@string/delete"
        android:focusable="true"
        app:fabSize="mini"
        app:rippleColor="@color/design_default_color_primary"
        app:srcCompat="@drawable/ic_delete_white_24dp"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/design_default_color_primary"
        android:backgroundTint="@color/design_default_color_primary"
        android:clickable="true"
        android:contentDescription="@string/return_to_game"
        android:focusable="true"
        app:fabSize="mini"
        app:rippleColor="@color/design_default_color_primary"
        app:srcCompat="@drawable/abc_vector_test"
        app:tint="@color/white" />

    <include layout="@layout/content_main" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>